add:header and navigation links

--- a/travel_recmmendation.html
+++ b/travel_recmmendation.html
@@ -1,5 +1,39 @@
 <!DOCTYPE html>
 <html>
-
-
+  <head>
+    <title>TravelSphere</title>
+    <link rel="stylesheet" href="./travel_recmmendation.css" />
+  </head>
+  <body>
+    
+    <header>
+        <!-- Navigation bar -->
+            <nav class="navbar-container">
+              <div class="logo-section">
+                <img src="./public/logo1.png" alt="logo"/>
+                TravelSphere
+              </div>
+              <div class="links">
+                <a class="link" href="#home">Home</a>
+                <a class="link" href="#about">About Us</a>
+                <a class="link" href="#contact">Contact Us</a>
+              </div>
+              <div class="searchbar">
+                <input id="search-bar" type="text" />
+                <div>
+                  <button>Search</button>
+                  <button>Clear</button>
+                </div>
+              </div>
+            </nav>
+    </header>
+    
+    <!-- Main Section -->
+    <main class="main-container">
+        <!-- <div > -->
+            <!-- Container -->
+        <!-- </div> -->
+    </main>
+    <script src="./travel_recmmendation.js"></script>
+  </body>
 </html>
