feature:addes styles

--- a/about.html
+++ b/about.html
@@ -5,13 +5,13 @@
     <link rel="stylesheet" href="./travel_recmmendation.css" />
   </head>
   <body>
+    <!-- <div class="inner-container"> -->
+
     <header>
       <!-- Navigation bar -->
       <nav class="navbar-container">
         <div class="logo-section">
-          <a href="travel_recmmendation.html"
-            ><img src="./public/logo1.png" alt="logo"
-          /></a>
+          <a href="travel_recmmendation.html"><img src="./public/logo1.png" alt="logo" /></a>
           TravelSphere
         </div>
         <div class="links">
@@ -35,17 +35,12 @@
 
     <!-- Main Section -->
     <main class="main-container">
-      <div class="main-inner-container">
-        <h1 id="h-tag">EXPLORE DREAM DESTINATION</h1>
-
-        <p>
-          It encourages exploration of unfamiliar territories, embracing diverse
-          cultures and landscapes, while pursuing the desired destination that
-          captivates the heart and ignites a sense of wonder.
-        </p>
-        <button>BOOK NOW</button>
-      </div>
+      <!-- <div > -->
+      <!-- Container -->
+      <!-- </div> -->
     </main>
+    <!-- </div>  -->
+
     <script src="./travel_recmmendation.js"></script>
   </body>
 </html>
