--- a/contact.html
+++ b/contact.html
@@ -5,13 +5,13 @@
     <link rel="stylesheet" href="./travel_recmmendation.css" />
   </head>
   <body>
+    <!-- <div class="inner-container"> -->
+
     <header>
       <!-- Navigation bar -->
       <nav class="navbar-container">
         <div class="logo-section">
-          <a href="travel_recmmendation.html"
-            ><img src="./public/logo1.png" alt="logo"
-          /></a>
+          <a href="travel_recmmendation.html"><img src="./public/logo1.png" alt="logo" /></a>
           TravelSphere
         </div>
         <div class="links">
@@ -20,7 +20,7 @@
           <a class="link" href="contact.html">Contact Us</a>
         </div>
         <div class="searchbar-container">
-          <div id="searchbar">
+          <!-- <div id="searchbar">
             <input type="text" placeholder="Enter a destination or keyword" />
             <img src="./public/icon.png" alt="search" />
           </div>
@@ -28,24 +28,19 @@
           <div id="serchbar-btn">
             <button id="search-btn">Search</button>
             <button id="clear-btn">Clear</button>
-          </div>
+          </div> -->
         </div>
       </nav>
     </header>
 
     <!-- Main Section -->
     <main class="main-container">
-      <div class="main-inner-container">
-        <h1 id="h-tag">EXPLORE DREAM DESTINATION</h1>
-
-        <p>
-          It encourages exploration of unfamiliar territories, embracing diverse
-          cultures and landscapes, while pursuing the desired destination that
-          captivates the heart and ignites a sense of wonder.
-        </p>
-        <button>BOOK NOW</button>
-      </div>
+      <!-- <div > -->
+      <!-- Container -->
+      <!-- </div> -->
     </main>
+    <!-- </div>  -->
+
     <script src="./travel_recmmendation.js"></script>
   </body>
 </html>
