--- a/travel_recmmendation.html
+++ b/travel_recmmendation.html
@@ -35,6 +35,16 @@
 
     <!-- Main Section -->
     <main class="main-container">
+      <div class="left-container">
+        <div id="h-line"></div>
+        <div class="social-icons">
+          <a><img src="./public/tw.png" alt="tw" /></a>
+          <a><img src="./public/fb.png" alt="fb" /></a>
+          <a><img src="./public/in.png" alt="in" /></a>
+          <a><img src="./public/yt.png" alt="yt" /></a>
+        </div>
+      </div>
+    
       <div class="main-inner-container">
         <h1 id="h-tag">EXPLORE DREAM DESTINATION</h1>
 
