add:contact form

--- a/about.html
+++ b/about.html
@@ -11,7 +11,9 @@
       <!-- Navigation bar -->
       <nav class="navbar-container">
         <div class="logo-section">
-          <a href="travel_recmmendation.html"><img src="./public/logo1.png" alt="logo" /></a>
+          <a href="travel_recmmendation.html"
+            ><img src="./public/logo1.png" alt="logo"
+          /></a>
           TravelSphere
         </div>
         <div class="links">
@@ -19,8 +21,8 @@
           <a class="link" href="about.html">About Us</a>
           <a class="link" href="contact.html">Contact Us</a>
         </div>
-        <div class="searchbar-container">
-          <div id="searchbar">
+        <div class="searchbar-container" style="opacity: 0">
+          <!-- <div id="searchbar">
             <input type="text" placeholder="Enter a destination or keyword" />
             <img src="./public/icon.png" alt="search" />
           </div>
@@ -28,16 +30,48 @@
           <div id="serchbar-btn">
             <button id="search-btn">Search</button>
             <button id="clear-btn">Clear</button>
-          </div>
+          </div> -->
         </div>
       </nav>
     </header>
 
     <!-- Main Section -->
     <main class="main-container">
-      <!-- <div > -->
-      <!-- Container -->
-      <!-- </div> -->
+      <div class="left-container">
+        <div id="h-line"></div>
+        <div class="social-icons">
+          <a target="_blank" href="https://x.com"
+            ><img src="./public/tw.png" alt="tw"
+          /></a>
+          <a target="_blank" href="https://facebook.com"
+            ><img src="./public/fb.png" alt="fb"
+          /></a>
+          <a target="_blank" href="https://www.instagram.com/"
+            ><img src="./public/in.png" alt="in"
+          /></a>
+          <a target="_blank" href="https://www.youtube.com"
+            ><img src="./public/yt.png" alt="yt"
+          /></a>
+        </div>
+      </div>
+      <div class="main-inner-container-about">
+        <h1 id="h-tag-about">ABOUT US</h1>
+
+        <p>
+          Welcome to Our Company! We are team of passionate individuals
+          dedicated to providing excellent sevices products to our sustomers Our
+          misson is to
+          <span style="font-weight: bold">provide the best experience</span> for
+          people traveling to defferent destinations around the world. Our
+          values include integrity. innovation, customer satisfaction, and
+          teamwork. We believe in
+          <span style="font-weight: bold">putting our customers first</span> and
+          <span style="font-weight: bold"> working together </span>to achieve
+          our goals. Feel free to explore our website to learn more about what
+          we offer!
+        </p>
+        <!-- <button>BOOK NOW</button> -->
+      </div>
     </main>
     <!-- </div>  -->
 
