--- a/travel_recmmendation.html
+++ b/travel_recmmendation.html
@@ -35,16 +35,25 @@
 
     <!-- Main Section -->
     <main class="main-container">
+      <!-- Social meadia icons -->
       <div class="left-container">
         <div id="h-line"></div>
         <div class="social-icons">
-          <a><img src="./public/tw.png" alt="tw" /></a>
-          <a><img src="./public/fb.png" alt="fb" /></a>
-          <a><img src="./public/in.png" alt="in" /></a>
-          <a><img src="./public/yt.png" alt="yt" /></a>
+          <a target="_blank" href="https://x.com"
+            ><img src="./public/tw.png" alt="tw"
+          /></a>
+          <a target="_blank" href="https://facebook.com"
+            ><img src="./public/fb.png" alt="fb"
+          /></a>
+          <a target="_blank" href="https://www.instagram.com/"
+            ><img src="./public/in.png" alt="in"
+          /></a>
+          <a target="_blank" href="https://www.youtube.com"
+            ><img src="./public/yt.png" alt="yt"
+          /></a>
         </div>
       </div>
-    
+
       <div class="main-inner-container">
         <h1 id="h-tag">EXPLORE DREAM DESTINATION</h1>
 
