add:Added a Team card

--- a/about.html
+++ b/about.html
@@ -72,6 +72,15 @@
         </p>
         <!-- <button>BOOK NOW</button> -->
       </div>
+      <div class="team-container">
+        <h1>Our Team</h1>
+        <div class="team-detail-card">
+          <img src="" alt="profile">
+          <h5>Jhone doe</h5>
+          <p>Jhon is responsible for Developent</p>
+          <span>CEO</span>
+        </div>
+      </div>
     </main>
     <!-- </div>  -->
 
