--- a/about.html
+++ b/about.html
@@ -75,7 +75,20 @@
       <div class="team-container">
         <h1>Our Team</h1>
         <div class="team-detail-card">
-          <img src="" alt="profile">
+          <img src="" alt="profile" />
+          <h5>Jhone doe</h5>
+          <p>Jhon is responsible for Developent</p>
+          <span>CEO</span>
+        </div>
+        <div class="team-detail-card">
+          <img src="" alt="profile" />
+          <h5>Jhone doe</h5>
+          <p>Jhon is responsible for Developent</p>
+          <span>CEO</span>
+        </div>
+
+        <div class="team-detail-card">
+          <img src="" alt="profile" />
           <h5>Jhone doe</h5>
           <p>Jhon is responsible for Developent</p>
           <span>CEO</span>
