--- a/about.html
+++ b/about.html
@@ -70,32 +70,37 @@
           our goals. Feel free to explore our website to learn more about what
           we offer!
         </p>
-        <!-- <button>BOOK NOW</button> -->
       </div>
       <div class="team-container">
         <h1>Our Team</h1>
-        <div class="team-detail-card">
-          <img src="" alt="profile" />
-          <h5>Jhone doe</h5>
-          <p>Jhon is responsible for Developent</p>
-          <span>CEO</span>
-        </div>
-        <div class="team-detail-card">
-          <img src="" alt="profile" />
-          <h5>Jhone doe</h5>
-          <p>Jhon is responsible for Developent</p>
-          <span>CEO</span>
-        </div>
-
-        <div class="team-detail-card">
-          <img src="" alt="profile" />
-          <h5>Jhone doe</h5>
-          <p>Jhon is responsible for Developent</p>
-          <span>CEO</span>
+        <div class="team-detail-container">
+          <div class="team-detail-card">
+            <img src="./public//profile.jpg" alt="profile" />
+            <div class="profile-info">
+              <h5>Jhon doe</h5>
+              <p>Jhon is responsible for...</p>
+              <span>CEO</span>
+            </div>
+          </div>
+          <div class="team-detail-card">
+            <img src="./public//profile.jpg" alt="profile" />
+            <div class="profile-info">
+              <h5>Celina Thomas</h5>
+              <p>Celina is responsible for...</p>
+              <span>Team Lead</span>
+            </div>
+          </div>
+          <div class="team-detail-card">
+            <img src="./public//profile.jpg" alt="profile" />
+            <div class="profile-info">
+              <h5>Mike Tysen</h5>
+              <p>Mike is responsible for...</p>
+              <span>Delivery Head</span>
+            </div>
+          </div>
         </div>
       </div>
     </main>
-    <!-- </div>  -->
 
     <script src="./travel_recmmendation.js"></script>
   </body>
