--- a/travel_recmmendation.html
+++ b/travel_recmmendation.html
@@ -21,7 +21,7 @@
         </div>
         <div class="searchbar-container">
           <div id="searchbar">
-            <input type="text" placeholder="Enter a destination or keyword" />
+            <input type="text" id="searchbar-value" placeholder="Enter a destination or keyword" />
             <img src="./public/icon.png" alt="search" />
           </div>
 
