added reccomded list

--- a/travel_recmmendation.html
+++ b/travel_recmmendation.html
@@ -21,7 +21,11 @@
         </div>
         <div class="searchbar-container">
           <div id="searchbar">
-            <input type="text" id="searchbar-value" placeholder="Enter a destination or keyword" />
+            <input
+              type="text"
+              id="searchbar-value"
+              placeholder="Enter a destination or keyword"
+            />
             <img src="./public/icon.png" alt="search" />
           </div>
 
@@ -64,6 +68,7 @@
         </p>
         <button>BOOK NOW</button>
       </div>
+      <div id="list-container"></div>
     </main>
     <script src="./travel_recmmendation.js"></script>
   </body>
