added reccomded list

--- a/about.html
+++ b/about.html
@@ -11,13 +11,13 @@
       <!-- Navigation bar -->
       <nav class="navbar-container">
         <div class="logo-section">
-          <a href="travel_recmmendation.html"
+          <a href="index.html"
             ><img src="./public/logo1.png" alt="logo"
           /></a>
           TravelSphere
         </div>
         <div class="links">
-          <a class="link" href="travel_recmmendation.html">Home</a>
+          <a class="link" href="index.html">Home</a>
           <a class="link" href="about.html">About Us</a>
           <a class="link" href="contact.html">Contact Us</a>
         </div>
